Homework 4_draft/k8s/ingress0.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: jaeger
spec:
  rules:
  - host: jaeger.arch.homework
    http:
      paths:
        - path: /
          backend:
            serviceName: jaeger-query-nodeport
            servicePort: 16686
