Homework 4_draft/k8s/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: kiali
spec:
  rules:
  - host: kiali.arch.homework
    http:
      paths:
        - path: /
          backend:
            serviceName: kiali-nodeport
            servicePort: 20001
