Homework 4_draft/k8s/ingress3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxyapp-ingress
  namespace: default
spec:
  rules:
  - host: proxyapp.arch.homework
    http:
      paths:
        - path: /
          backend:
            serviceName: proxy-app
            servicePort: 80
